--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4473651 */
-  src: url('iconfont.woff2?t=1711521856566') format('woff2'),
-       url('iconfont.woff?t=1711521856566') format('woff'),
-       url('iconfont.ttf?t=1711521856566') format('truetype');
+  src: url('iconfont.woff2?t=1711535991611') format('woff2'),
+       url('iconfont.woff?t=1711535991611') format('woff'),
+       url('iconfont.ttf?t=1711535991611') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-huifu:before {
+  content: "\e61a";
+}
+
+.icon-icon-:before {
+  content: "\e628";
 }
 
 .icon-wendang-xuanzhong:before {
