--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4473651 */
-  src: url('iconfont.woff2?t=1712557152189') format('woff2'),
-       url('iconfont.woff?t=1712557152189') format('woff'),
-       url('iconfont.ttf?t=1712557152189') format('truetype');
+  src: url('iconfont.woff2?t=1712568481065') format('woff2'),
+       url('iconfont.woff?t=1712568481065') format('woff'),
+       url('iconfont.ttf?t=1712568481065') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-file:before {
+  content: "\e629";
+}
+
+.icon-video:before {
+  content: "\e63c";
 }
 
 .icon-huifu:before {
