--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4473651 */
-  src: url('iconfont.woff2?t=1712911854802') format('woff2'),
-       url('iconfont.woff?t=1712911854802') format('woff'),
-       url('iconfont.ttf?t=1712911854802') format('truetype');
+  src: url('iconfont.woff2?t=1713089863911') format('woff2'),
+       url('iconfont.woff?t=1713089863911') format('woff'),
+       url('iconfont.ttf?t=1713089863911') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-Excel:before {
+  content: "\e7de";
 }
 
 .icon-xuesheng:before {
